--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bcash",
+  "name": "bwormhole",
   "version": "1.1.0",
   "description": "Bitcoin cash bike-shed",
   "license": "MIT",
@@ -23,36 +23,36 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "bcfg": "~0.1.4",
+    "bcfg": "~0.1.2",
     "bclient": "~0.1.5",
-    "bcrypto": "~3.0.1",
-    "bdb": "~1.1.3",
-    "bdns": "~0.1.3",
-    "bevent": "~0.1.3",
-    "bfile": "~0.1.3",
-    "bfilter": "~1.0.3",
-    "bheep": "~0.1.3",
-    "binet": "~0.3.3",
-    "blgr": "~0.1.4",
-    "blru": "~0.1.4",
-    "blst": "~0.1.3",
-    "bmutex": "~0.1.4",
-    "bsert": "~0.0.5",
-    "bsip": "~0.1.4",
-    "bsock": "~0.1.4",
-    "bsocks": "~0.2.3",
-    "bstring": "~0.3.4",
-    "btcp": "~0.1.3",
-    "buffer-map": "~0.0.4",
-    "bufio": "~1.0.3",
-    "bupnp": "~0.2.4",
-    "bval": "~0.1.4",
-    "bweb": "~0.1.6",
-    "mrmr": "~0.1.4",
-    "n64": "~0.2.5"
+    "bcrypto": "~3.0.2",
+    "bdb": "~1.1.5",
+    "bdns": "~0.1.4",
+    "bevent": "~0.1.4",
+    "bfile": "~0.1.4",
+    "bfilter": "~1.0.4",
+    "bheep": "~0.1.4",
+    "binet": "~0.3.4",
+    "blgr": "~0.1.5",
+    "blru": "~0.1.5",
+    "blst": "~0.1.4",
+    "bmutex": "~0.1.5",
+    "bsert": "~0.0.8",
+    "bsip": "~0.1.5",
+    "bsock": "~0.1.5",
+    "bsocks": "~0.2.4",
+    "bstring": "~0.3.5",
+    "btcp": "~0.1.4",
+    "buffer-map": "~0.0.5",
+    "bufio": "~1.0.4",
+    "bupnp": "~0.2.5",
+    "bval": "~0.1.5",
+    "bweb": "~0.1.7",
+    "mrmr": "~0.1.5",
+    "n64": "~0.2.6"
   },
   "devDependencies": {
-    "bmocha": "^0.1.0"
+    "bmocha": "^1.0.0"
   },
   "main": "./lib/bcoin.js",
   "bin": {
@@ -62,21 +62,12 @@
     "bcash-wallet": "./bin/bwallet"
   },
   "scripts": {
-    "browserify": "browserify -s bcash lib/bcoin-browser.js | uglifyjs -c > bcash.js",
-    "clean": "rm -f {browser/,}{bcash.js,bcash-worker.js,app.js,worker.js}",
-    "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint $(cat .eslintfiles) || exit 0",
     "lint-file": "eslint",
-    "lint-ci": "eslint $(cat .eslintfiles)",
     "test": "bmocha --reporter spec test/*.js",
     "test-browser": "NODE_BACKEND=js bmocha --reporter spec test/*.js",
     "test-file": "bmocha --reporter spec",
-    "test-file-browser": "NODE_BACKEND=js bmocha --reporter spec",
-    "test-ci": "istanbul cover --report lcovonly node_modules/.bin/bmocha -- --reporter spec test/*-test.js",
-    "webpack": "webpack --mode production --config webpack.browser.js",
-    "webpack-browser": "webpack --mode production --config webpack.browser.js",
-    "webpack-compat": "webpack --mode production --config webpack.compat.js",
-    "webpack-app": "webpack --mode production --config webpack.app.js"
+    "test-file-browser": "NODE_BACKEND=js bmocha --reporter spec"
   },
   "browser": {
     "./lib/hd/nfkd": "./lib/hd/nfkd-compat.js",
